--- a/components/views/home.hbs
+++ b/components/views/home.hbs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Trivia Game</title>
+    <title>CS 499 Trivia</title>
   </head>
   <body>
     {{> header}}
-    <a href="/play">Play</a>
-    <a href="/hub">Hub</a>
+    {{> nav}}
+    <h2>Home</h2>
+    <p>Welcome to Group Fibbage's project for CS 499.</p>
   </body>
 </html>
