--- a/components/views/hub.hbs
+++ b/components/views/hub.hbs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Trivia Game</title>
+    <title>CS 499 Trivia</title>
   </head>
   <body>
     {{> header}}
+    {{> nav}}
+    <h2>Hub</h2>
     <p>Under Construction</p>
-    <a href="/">Home</a>
   </body>
 </html>
