--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -2,10 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Trivia Game</title>
+    <title>CS 499 Trivia</title>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="/js/handlers.js"></script>
   </head>
   <body>
     {{> header}}
+    {{> nav}}
+    <h2>Play</h2>
     {{> qa}}
   </body>
 </html>
