--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>CS 499 Trivia</title>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script type="text/javascript" src="/js/handlers.js"></script>
   </head>
   <body>
@@ -11,5 +12,7 @@
     {{> nav}}
     <h2>Play</h2>
     {{> qa}}
+    <button type="button" id="answer_submit_button" disabled="true">Submit</button>
+    <button type="button" id="next_question_button" disabled="true">Next</button>
   </body>
 </html>
