--- a/components/partials/qa.hbs
+++ b/components/partials/qa.hbs
@@ -9,7 +9,7 @@
           name="answer"
           value="{{this}}"
           data-question="{{../id}}">
-        {{this}}
+        <span class="answerLabel">{{this}}</span>
         <br>
       </div>
     {{/each}}
