--- a/components/views/home.hbs
+++ b/components/views/home.hbs
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>CS 499 Trivia</title>
+    {{> includes}}
   </head>
   <body>
     {{> header}}
     {{> nav}}
-    <h2>Home</h2>
-    <p>Welcome to Group Fibbage's project for CS 499.</p>
+    <div class="container">
+      <p>Welcome to Group Fibbage's project for CS 499.</p>
+    </div>
   </body>
 </html>
