--- a/components/views/hub.hbs
+++ b/components/views/hub.hbs
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>CS 499 Trivia</title>
+    {{> includes}}
   </head>
   <body>
     {{> header}}
     {{> nav}}
-    <h2>Hub</h2>
-    <p>Under Construction</p>
+    <div class="container">
+      <p>Under Construction</p>
+    </div>
   </body>
 </html>
