--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>CS 499 Trivia</title>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    {{> includes}}
     <script type="text/javascript" src="/js/handlers.js"></script>
   </head>
   <body>
     {{> header}}
     {{> nav}}
-    <h2>Play</h2>
-    {{> qa}}
-    <button type="button" id="answer_submit_button" disabled="true">Submit</button>
-    <button type="button" id="next_question_button" disabled="true">Next</button>
+    <div class="container">
+      <div class="questionBody">
+        <!-- Empty -->
+      </div>
+      <button type="button" id="answer_submit_button" disabled="true">Submit</button>
+      <button type="button" id="next_question_button" disabled="true">Next</button>
+    </div>
   </body>
 </html>
