--- a/components/partials/qa.hbs
+++ b/components/partials/qa.hbs
@@ -1,17 +1,8 @@
 <div class="questionBody">
-  <p>{{question}}</p>
-  <ul>
-    {{#each answers}}
-      <div>
-        <input
-          class="answer"
-          data-question="{{../id}}"
-          name="answer"
-          type="radio"
-          value="{{this}}">
-        <span class="answerLabel">{{this}}</span>
-        <br>
-      </div>
-    {{/each}}
+  <p id="question_body">
+    <!-- Empty -->
+  </p>
+  <ul id="answer_list">
+    <!-- Empty -->
   </ul>
 </div>
