--- a/components/css/style.css
+++ b/components/css/style.css
@@ -1,7 +1,23 @@
 body {
-  padding-top: 70px;
+  padding-top: 60px;
 }
 
 .questionBody {
   margin: 10px, 0;
+}
+
+.row {
+  margin-bottom: 10px;
+}
+
+.navlabel {
+  margin-bottom: 0;
+  padding: 6px;
+  background: transparent;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  height: 34px;
+  font-size: 14px;
+  color: #777;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
 }
