--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>CS 499 Trivia</title>
     {{> includes}}
-    <script type="text/javascript" src="/js/client.js"></script>
+    <script type="text/javascript" src="/js/PlayerClient.js"></script>
   </head>
   <body>
     {{> nav}}
