--- a/components/views/home.hbs
+++ b/components/views/home.hbs
@@ -7,8 +7,16 @@
   </head>
   <body>
     {{> nav}}
-    <div class="container">
-      <p>Welcome to Group Fibbage's project for CS 499.</p>
+    <div class="container fadeable">
+      <div class="row">
+        <h1 class="banner" align="center"> Trivia Game </h1>
+        <p class="game-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fringilla nisi id mauris venenatis commodo. Maecenas vitae quam non dui commodo hendrerit ullamcorper in est. Phasellus tincidunt augue non euismod tempus. Aliquam nibh velit, convallis nec efficitur in, efficitur sed justo. Nam nisl elit, mollis quis fermentum et, ullamcorper ut nisl. Duis in vestibulum velit, a cursus libero. Vivamus commodo volutpat odio, eget elementum lectus bibendum vel. Duis volutpat turpis quis molestie venenatis. Ut ligula sem, venenatis id enim eget, porta gravida est. Ut eu ipsum at est porttitor fermentum. Aliquam fermentum sapien eu lacus cursus, vitae scelerisque velit tempus. Etiam dictum, enim sed varius ultrices, ipsum enim varius mauris, sit amet iaculis mi leo quis est. Mauris lectus diam, cursus id placerat eu, ornare eget magna. Mauris nunc mi, facilisis in ex id, lacinia scelerisque massa. Nullam fringilla fermentum laoreet.
+        </p>
+        <p class="game-description">
+          Nullam dignissim quam ut sapien egestas, eu tincidunt velit aliquet. Nulla facilisi. In eget viverra mi. Phasellus quis ornare ipsum. Nam at elit vel neque ultricies elementum. Fusce at molestie lorem. Sed luctus purus ut consectetur tristique. Nullam vel suscipit tortor. Sed enim lectus, vestibulum a ante nec, ultricies interdum lectus. Phasellus auctor, odio placerat bibendum sollicitudin, sapien velit molestie eros, in pharetra sapien eros sit amet tortor. Integer ultricies ornare nisl, vitae feugiat dui commodo ac.
+        </p>
+      </div>
     </div>
   </body>
 </html>
