--- a/components/partials/includes.hbs
+++ b/components/partials/includes.hbs
@@ -1,14 +1,21 @@
 <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
 <script src="/socket.io/socket.io.js"></script>
 
+<script src="https://use.fontawesome.com/626ced144b.js"></script>
+
+<link href="https://fonts.googleapis.com/css?family=Cantora+One|Open+Sans" rel="stylesheet">
+
+<link rel="stylesheet" type="text/css" href="/css/normalize.css">
+
+<link rel="stylesheet" type="text/css" href="/css/simple-grid.css">
+
 <link rel="stylesheet" type="text/css" href="/css/style.css">
+
+<link rel="stylesheet" type="text/css" href="/css/answers.css">
+
+<link rel="stylesheet" type="text/css" href="/css/nav.css">
+
+<script src="https://use.fontawesome.com/626ced144b.js"></script>
+
+<script type="text/javascript" src="/js/CommonClient.js"></script>
