--- a/components/partials/room.hbs
+++ b/components/partials/room.hbs
@@ -1,23 +1,17 @@
-<div class="navbar-form navbar-right">
-  <div class="input-group">
-    <div class="well well-sm navlabel">
-      <span>Current Room:</span>
-      <span id="room_id_label">{{roomNumber}}</span>
-    </div>
-  </div>
-  <div class="input-group">
-    <input id="room_id_field"
-      type="text"
-      class="form-control"
-      name="roomID"
-      placeholder="New Room ID">
-    <span class="input-group-btn">
-      <button id="join_room_button"
-        class="btn btn-default"
-        type="button"
-        disabled="true">
-        Join
-      </button>
-    </span>
-  </div>
+<div class="nav-display">
+  <div>Current Room: </div>
+  <div id="room_id_label">{{roomNumber}}</div>
+</div>
+<div>
+  <input id="room_id_field"
+    type="text"
+    class="form-control input-small"
+    name="roomID"
+    placeholder="New Room ID">
+  <button id="join_room_button"
+    class="btn btn-primary"
+    type="button"
+    disabled="true">
+    Join
+  </button>
 </div>
