--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -8,14 +8,14 @@
   </head>
   <body>
     {{> nav}}
-    <div class="container">
+    <div class="container fadeable">
       <div class="row">
         <div class="questionBody">
           {{> qa}}
         </div>
         <button id="answer_submit_button"
           type="button"
-          class="btn btn-default"
+          class="btn-primary"
           disabled="true">
           Submit
         </button>
