--- a/components/css/nav.css
+++ b/components/css/nav.css
@@ -11,10 +11,10 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
   background-color: #FC6C37;
   white-space: pre;
   border-radius: 4px;
+  color: #E2DFF3;
 }
 
 .nav-content {
@@ -94,7 +94,7 @@
 }
 
 .questionBody {
-  margin: 10px, 0;
+  margin: 10px 0;
 }
 
 .row {
