--- a/components/partials/nav.hbs
+++ b/components/partials/nav.hbs
@@ -3,16 +3,22 @@
     <div class="nav-group">
       <div class="nav-title">CS 499 Trivia</div>
       <div role="presentation" class="nav-tab {{#if isHomePage}}active{{/if}}">
-        <i class="fa fa-home fa-2" aria-hidden="true"></i>
-        <a href="/" class="nav-link">Home</a>
+        <a href="/" class="nav-link">
+          <i class="fa fa-home inline" aria-hidden="true"></i>
+          <span>Home</span>
+        </a>
       </div>
       <div role="presentation" class="nav-tab {{#if isPlayPage}}active{{/if}}">
-        <i class="fa fa-graduation-cap fa-2" aria-hidden="true"></i>
-        <a href="/play" class="nav-link">Play</a>
+        <a href="/play" class="nav-link">
+          <i class="fa fa-graduation-cap inline" aria-hidden="true"></i>
+          <span>Play</span>
+        </a>
       </div>
       <div role="presentation" class="nav-tab {{#if isHubPage}}active{{/if}}">
-        <i class="fa fa-bar-chart fa-2" aria-hidden="true"></i>
-        <a href="/hub" class="nav-link">Hub</a>
+        <a href="/hub" class="nav-link">
+          <i class="fa fa-bar-chart inline" aria-hidden="true"></i>
+          <span>Hub</span>
+        </a>
       </div>
     </div>
     <div class="nav-group">
