--- a/components/partials/qa.hbs
+++ b/components/partials/qa.hbs
@@ -1,8 +1,4 @@
-<div class="questionBody">
-  <p id="question_body">
-    <!-- Empty -->
-  </p>
-  <ul id="answer_list">
-    <!-- Empty -->
-  </ul>
-</div>
+{{> question}}
+<ul id="answer_list">
+  <!-- Empty -->
+</ul>
