--- a/components/css/style.css
+++ b/components/css/style.css
@@ -28,6 +28,14 @@ i {
   margin-right: 3px;
 }
 
+h2 {
+  margin: 10px 0px;
+}
+
+ul {
+  margin-top: 10px
+}
+
 .fadeable {
   display: none;
 }
@@ -74,4 +82,52 @@ i {
 
 .split {
   justify-content: space-between;
+}
+
+.end {
+  justify-content: flex-end;
+}
+
+.center {
+  align-items: center;
+}
+
+.inlineBlock {
+  display: inline-block;
+}
+
+.inline {
+  display: inline;
+}
+
+.question-container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.question-label {
+  display: inline;
+  position: relative;
+  top: 1px;
+  left: -3px;
+  font-family: 'Cantora One', sans-serif;
+}
+
+.players-label {
+  display: inline;
+  position: relative;
+  top: -1px;
+  font-family: 'Cantora One', sans-serif;
+  white-space: pre;
+}
+
+.player-label {
+  font-weight: 900;
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+
+.playercount-label {
+  font-size: 25px;
+  font-weight: 400;
 }
