--- a/components/views/hub.hbs
+++ b/components/views/hub.hbs
@@ -9,82 +9,18 @@
   <body>
     {{> nav}}
     <div class="container fadeable">
-      <div class="row">
-        <div class="question-container">
-          <h2 class="question-header">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ac nibh gravida, rhoncus arcu et, convallis lacus morbi?
-          </h2>
+      {{> question}}
+      <div class="flex end">
+        <div class="eventlabel nav-display">
+          <span id="eventLabelEvent"></span>
+          <span id="eventLabelTime"></span>
         </div>
-
-        <div class="">
-          <div class="">
-            <table class="">
-              <thead>
-                <tr class="">
-                  <th></th>
-                  <th>Likes</th>
-                  <th>Streak</th>
-                  <th>Total Points</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr class="">
-                  <th scope="row">Player Uno</th>
-                  <td>5</td>
-                  <td>4</td>
-                  <td>9</td>
-                </tr>
-                <tr class="">
-                  <th scope="row">Player Dos</th>
-                  <td>2</td>
-                  <td>3</td>
-                  <td>8</td>
-                </tr>
-                <tr class="">
-                  <th scope="row">Player Tres</th>
-                  <td>1</td>
-                  <td>1</td>
-                  <td>6</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-
-        <div class="col-md-10 study-grid">
-    				<div class="game-statistics">
-    					<h4>Funny</h4>
-    					<div class="progress">
-    					  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
-    						<span class="sr-only">90% Complete (success)</span>
-    					  </div>
-    					</div>
-    					<h4>Stupid</h4>
-    					<div class="progress">
-    					  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-    						<span class="sr-only">60% Complete</span>
-    					  </div>
-    					</div>
-    					<h4>Smart</h4>
-    					<div class="progress">
-    					  <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
-    						<span class="sr-only">60% Complete (warning)</span>
-    					  </div>
-    					</div>
-    					<h4>Random</h4>
-    					<div class="progress">
-    					  <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-    						<span class="sr-only">60% Complete (warning)</span>
-    					  </div>
-    					</div>
-    				</div>
-
-    			</div>
-    			<div class="clearfix"></div>
-
-
-
       </div>
+      <h2 class="players-label inline">Players: </h2>
+      <h3 class="playercount-label inline">0</h3>
+      <ul id="playerList">
+        <!-- Empty -->
+      </ul>
     </div>
   </body>
 </html>
