--- a/components/css/nav.css
+++ b/components/css/nav.css
@@ -2,6 +2,7 @@
   background-color: #448DE5;
   box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
   color: #E2DFF3;
+  height: 45px;
 }
 
 .nav-display {
