--- a/components/css/style.css
+++ b/components/css/style.css
@@ -77,7 +77,12 @@ ul {
 
 .flex {
   display: flex;
-  flex-direction: row;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .split {
