--- a/components/css/nav.css
+++ b/components/css/nav.css
@@ -1,106 +1,455 @@
-.nav {
-  background-color: #448DE5;
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
-  color: #E2DFF3;
-  height: 45px;
+/* Phone */
+@media screen and (max-width: 700px) {
+  .nav {
+    background-color: #448DE5;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
+    color: #E2DFF3;
+    height: 100px;
+  }
+
+  .nav-group {
+    display: inline-block;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-title {
+    font-size: 30px;
+    line-height: 30px;
+    font-family: 'Cantora One', sans-serif;
+    color: #E2DFF3;
+    cursor: default;
+    margin: 12px 0px 0px 12px;
+  }
+
+  .nav-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    height:100px;
+  }
+
+  .nav-tab {
+    visibility: hidden;
+  }
+
+  .nav-link {
+    visibility: hidden;
+  }
+
+  .nav-link-menu-icon {
+    visibility: visible;
+    text-shadow: none;
+    color: #E2DFF3;
+    font-size:36px;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin: 20px 0px 0px 20px;
+  }
+
+  .nav-tab:after {
+    visibility: hidden;
+  }
+
+  .nav-display {
+    margin-right: 6px;
+    margin-top: 10px;
+    height: 22px;
+    padding: 0 6px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #FC6C37;
+    white-space: pre;
+    border-radius: 4px;
+    color: #E2DFF3;
+  }
+
+.sub-menu {
+    display: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
-.nav-display {
-  margin-right: 12px;
-  height: 29px;
-  padding: 0 6px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: #FC6C37;
-  white-space: pre;
-  border-radius: 4px;
-  color: #E2DFF3;
+.sub-menu a {
+    font-size: 12px;
+    color: darkgrey;
+    background-color: white;
+    padding: 6px 0px 6px 6px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+    z-index: 1;
 }
 
-.nav-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: stretch;
-}
-
-.nav-group {
-  display:flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.nav-tab {
-  margin-left: 20px;
-  align-self: stretch;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 42px;
-  width: 55px;
-  padding: 0 5px;
-  position: relative;
-}
-
-.nav-tab > i ,
-.nav-tab > .nav-link {
-  padding-top: 5px;
-}
-
-.nav-tab:after {
-  display: block;
-  position: absolute;
-  left: 0;
-  bottom: -4px;
-  width: 0px;
-  height: 4px;
-  background-color: #FC6C37;
-  content: "";
-  transition: width 0.2s;
-}
-
-.nav-tab:hover {
-  color: #E2DFF3;
-}
-.nav-tab:hover:after {
-  width: 100%;
-}
-
-.nav-tab.active {
-  border-bottom-style: solid;
-  border-bottom-color: #FC6C37;
-  border-bottom-width: 4px;
-}
-
-.nav-title {
-  font-size: 25px;
-  line-height: 20px;
-  font-family: 'Cantora One', sans-serif;
-  color: #E2DFF3;
-  cursor: default;
-  margin-right: 12px;
-}
-
-.nav-link {
-  text-shadow: none;
-  color: #E2DFF3;
-  font-size:18px;
-  text-decoration: none;
-  display: flex;
-  flex-direction: row;
-  align-items: baseline;
-}
-
-.navlink:hover {
+.sub-menu a:hover {
   background-color: #EAEAEA;
 }
 
-.questionBody {
-  margin: 10px 0;
+.show {
+  display:block;
+}
 }
 
-.row {
-  margin-bottom: 10px;
+/* Tablet */
+@media screen and (min-width: 701px) and (max-width: 1000px) {
+  .nav {
+    background-color: #448DE5;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
+    color: #E2DFF3;
+    height: 100px;
+  }
+
+  .nav-display {
+    margin-right: 12px;
+    height: 29px;
+    padding: 0 6px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #FC6C37;
+    white-space: pre;
+    border-radius: 4px;
+    color: #E2DFF3;
+  }
+
+  .nav-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+
+  .nav-group {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-tab {
+    margin-left: 20px;
+    /*align-self: stretch;*/
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 42px;
+    width: 55px;
+    padding: 0 5px;
+    position: relative;
+  }
+
+  .nav-tab > i ,
+  .nav-tab > .nav-link {
+    padding-top: 5px;
+  }
+
+  .nav-tab:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    width: 0px;
+    height: 4px;
+    background-color: #FC6C37;
+    content: "";
+    transition: width 0.2s;
+  }
+
+  .nav-tab:hover {
+    color: #E2DFF3;
+  }
+  .nav-tab:hover:after {
+    width: 100%;
+  }
+
+  .nav-tab.active {
+    border-bottom-style: solid;
+    border-bottom-color: #FC6C37;
+    border-bottom-width: 4px;
+  }
+
+  .nav-title {
+    font-size: 25px;
+    line-height: 20px;
+    font-family: 'Cantora One', sans-serif;
+    color: #E2DFF3;
+    cursor: default;
+    margin-right: 12px;
+  }
+
+  .nav-link {
+    text-shadow: none;
+    color: #E2DFF3;
+    font-size:18px;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  .nav-link-menu-icon {
+    visibility: hidden;
+  }
+
+  .navlink:hover {
+    background-color: #EAEAEA;
+  }
+
+  .questionBody {
+    margin: 10px 0;
+  }
+
+  .row {
+    margin-bottom: 10px;
+  }
+
+  .sub-menu {
+      display: none;
+}
+}
+
+/* Laptop */
+@media screen and (min-width: 1001px) and (max-width: 1700px) {
+  .nav {
+    background-color: #448DE5;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
+    color: #E2DFF3;
+    height: 100px;
+  }
+
+  .nav-display {
+    margin-right: 12px;
+    height: 29px;
+    padding: 0 6px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #FC6C37;
+    white-space: pre;
+    border-radius: 4px;
+    color: #E2DFF3;
+  }
+
+  .nav-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+
+  .nav-group {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-tab {
+    margin-left: 20px;
+    /*align-self: stretch;*/
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 42px;
+    width: 55px;
+    padding: 0 5px;
+    position: relative;
+  }
+
+  .nav-tab > i ,
+  .nav-tab > .nav-link {
+    padding-top: 5px;
+  }
+
+  .nav-tab:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    width: 0px;
+    height: 4px;
+    background-color: #FC6C37;
+    content: "";
+    transition: width 0.2s;
+
+  }
+
+  .nav-tab:hover {
+    color: #E2DFF3;
+  }
+  .nav-tab:hover:after {
+    width: 100%;
+  }
+
+  .nav-tab.active {
+    border-bottom-style: solid;
+    border-bottom-color: #FC6C37;
+    border-bottom-width: 4px;
+  }
+
+  .nav-title {
+    font-size: 25px;
+    line-height: 20px;
+    font-family: 'Cantora One', sans-serif;
+    color: #E2DFF3;
+    cursor: default;
+    margin-right: 12px;
+  }
+
+  .nav-link {
+    text-shadow: none;
+    color: #E2DFF3;
+    font-size:18px;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  .nav-link-menu-icon {
+    visibility: hidden;
+  }
+
+  .navlink:hover {
+    background-color: #EAEAEA;
+  }
+
+  .questionBody {
+    margin: 10px 0;
+  }
+
+  .row {
+    margin-bottom: 10px;
+  }
+
+  .sub-menu {
+      display: none;
+    }
+}
+
+
+/* Large Desktop */
+@media screen and (min-width: 1701px){
+  .nav {
+    background-color: #448DE5;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
+    color: #E2DFF3;
+    height: 100px;
+  }
+
+  .nav-display {
+    margin-right: 12px;
+    height: 29px;
+    padding: 0 6px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #FC6C37;
+    white-space: pre;
+    border-radius: 4px;
+    color: #E2DFF3;
+  }
+
+  .nav-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+
+  .nav-group {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .nav-tab {
+    margin-left: 20px;
+    align-self: stretch;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    height: 42px;
+    width: 55px;
+    padding: 0 5px;
+    position: relative;
+  }
+
+  .nav-tab > i ,
+  .nav-tab > .nav-link {
+    padding-top: 5px;
+  }
+
+  .nav-tab:after {
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    width: 0px;
+    height: 4px;
+    background-color: #FC6C37;
+    content: "";
+    transition: width 0.2s;
+
+  }
+
+  .nav-tab:hover {
+    color: #E2DFF3;
+  }
+  .nav-tab:hover:after {
+    width: 100%;
+  }
+
+  .nav-tab.active {
+    border-bottom-style: solid;
+    border-bottom-color: #FC6C37;
+    border-bottom-width: 4px;
+  }
+
+  .nav-title {
+    font-size: 25px;
+    line-height: 20px;
+    font-family: 'Cantora One', sans-serif;
+    color: #E2DFF3;
+    cursor: default;
+    margin-right: 12px;
+  }
+
+  .nav-link {
+    text-shadow: none;
+    color: #E2DFF3;
+    font-size:18px;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+
+  .nav-link-menu-icon {
+    visibility: hidden;
+  }
+
+  .navlink:hover {
+    background-color: #EAEAEA;
+  }
+
+  .questionBody {
+    margin: 10px 0;
+  }
+
+  .row {
+    margin-bottom: 10px;
+  }
+
+  .sub-menu {
+      display: none;
+    }
 }
