--- a/components/views/home.hbs
+++ b/components/views/home.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>CS 499 Trivia</title>
     {{> includes}}
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
     {{> nav}}
