--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>CS 499 Trivia</title>
     {{> includes}}
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <script type="text/javascript" src="/js/PlayerClient.js"></script>
   </head>
   <body>
