--- a/components/css/style.css
+++ b/components/css/style.css
@@ -20,6 +20,15 @@ input {
   border-radius: 4px;
 }
 
+#admininput {
+  height: 29px;
+  background-color: #ffffff;
+  border: none;
+  padding: 0 3px;
+  color: #050401;
+  border-radius: 4px;
+}
+
 table {
   border-collapse: collapse;
 }
