--- a/components/views/admin.hbs
+++ b/components/views/admin.hbs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>CS 499 Trivia</title>
     {{> includes}}
+    <script type="text/javascript" src="/js/AdminClient.js"></script>
 </head>
 <body>
 {{> nav}}
@@ -14,11 +15,29 @@
     <div >
         <form>
             Please set the number of rounds:
-            <input type="number" name="rounds"
-                   min="0" max="100"  value="5">
-            <input type="submit">
+            <input id="admininput" type="number" name="rounds"
+                   min="0" max="100"  value="">
+            <button id="setRounds"
+                    class ="btn-primary"
+                    style="display: inline-block;">
+                Submit
+            </button>
         </form>
     </div>
+    <br/>
+    <div >
+        <form>
+            Please set the number of players:
+            <input id="admininput" type="number" name="numPlayers"
+                   min="0" max="10"  value="">
+            <button id="setPlayers"
+                    class ="btn-primary"
+                    style="display: inline-block;">
+                Submit
+            </button>
+        </form>
+    </div>
+
 
 </div>
 </body>
