--- a/components/css/nav.css
+++ b/components/css/nav.css
@@ -1,455 +1,219 @@
+/* General */
+
+.nav{
+  box-shadow:inset 0 1px 0 hsla(0,0,100%,.15),0 1px 5px rgba(0,0,0,.075);
+  color:#e2dff3;
+  position: absolute;
+  left: 0;
+  right: 0;
+  background-color: #448DE5;
+}
+
+.nav-display{
+  padding:0 6px;
+  display:flex;
+  flex-direction:row;
+  align-items:center;
+  white-space:pre;
+  border-radius:4px;
+  color:#e2dff3;
+  background:#fc6c37;
+}
+
+.nav-content{
+  display:flex;
+  flex-direction:row;
+  justify-content:space-between;
+  align-items:center;
+  position: relative;
+  z-index: 200;
+  background-color: #448DE5;
+}
+
+.nav-group{
+  flex-direction:row;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.nav-title{
+  color:#e2dff3;
+  cursor:default;
+}
+
+.sub-menu{
+  display:none;
+}
+
+/* Desktop */
+@media screen and (min-width: 701px) {
+  .nav-content {
+    justify-content: flex-start;
+  }
+
+  .nav-stub {
+    height: 50px;
+  }
+
+  .nav-display{
+    margin-right:12px;
+    height:29px;
+  }
+
+  .nav-group{
+    display:flex;
+  }
+
+  .nav-tab{
+    margin-left:20px;
+    align-self:stretch;
+    display:flex;
+    align-items:center;
+    justify-content:space-around;
+    height:42px;
+    width:55px;
+    padding:0 5px;
+    position:relative;
+  }
+
+  .nav-tab>i,.nav-tab>.nav-link{
+    padding-top:5px;
+  }
+
+  .nav-tab:after{
+    display:block;
+    position:absolute;
+    left:0;
+    bottom:-4px;
+    width:0;
+    height:4px;
+    content:'';
+    transition:width .2s;
+    background:#fc6c37;
+  }
+
+  .nav-tab:hover{
+    color:#e2dff3;
+  }
+
+  .nav-tab:hover:after{
+    width:100%;
+  }
+
+  .nav-tab.active{
+    border-bottom-style:solid;
+    border-bottom-color:#fc6c37;
+    border-bottom-width:4px;
+  }
+
+  .nav-title{
+    margin-right:12px;
+    font:25px/20px 'Cantora One',sans-serif;
+  }
+
+  .nav-link{
+    text-shadow:none;
+    color:#e2dff3;
+    font-size:18px;
+    text-decoration:none;
+    display:flex;
+    flex-direction:row;
+    align-items:baseline;
+  }
+
+  .nav-link-menu-icon{
+    display:none;
+  }
+
+  .navlink:hover{
+    background:#eaeaea;
+  }
+
+  .questionBody{
+    margin:10px 0;
+  }
+
+  .row{
+    margin-bottom:10px;
+  }
+}
+
 /* Phone */
 @media screen and (max-width: 700px) {
-  .nav {
-    background-color: #448DE5;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
-    color: #E2DFF3;
-    height: 100px;
+  .nav-stub {
+    height: 88px;
   }
 
-  .nav-group {
-    display: inline-block;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  .nav-display{
+    margin-right:6px;
+    margin-top:10px;
+    height:22px;
   }
 
-  .nav-title {
-    font-size: 30px;
-    line-height: 30px;
-    font-family: 'Cantora One', sans-serif;
-    color: #E2DFF3;
-    cursor: default;
-    margin: 12px 0px 0px 12px;
+  .nav-content{
+    padding: 20px;
   }
 
-  .nav-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-    height:100px;
+  .nav-group{
+    display:inline-block;
   }
 
-  .nav-tab {
-    visibility: hidden;
+  .nav-tab{
+    display:none;
   }
 
-  .nav-link {
-    visibility: hidden;
+  .nav-tab:after{
+    display:none;
   }
 
-  .nav-link-menu-icon {
-    visibility: visible;
-    text-shadow: none;
-    color: #E2DFF3;
-    font-size:36px;
-    text-decoration: none;
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    margin: 20px 0px 0px 20px;
+  .nav-title{
+    font:30px/30px 'Cantora One',sans-serif;
   }
 
-  .nav-tab:after {
-    visibility: hidden;
+  .nav-link{
+    display:none;
   }
 
-  .nav-display {
-    margin-right: 6px;
-    margin-top: 10px;
-    height: 22px;
-    padding: 0 6px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #FC6C37;
-    white-space: pre;
-    border-radius: 4px;
-    color: #E2DFF3;
-  }
-
-.sub-menu {
-    display: none;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-}
-
-.sub-menu a {
-    font-size: 12px;
-    color: darkgrey;
-    background-color: white;
-    padding: 6px 0px 6px 6px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-    z-index: 1;
-}
-
-.sub-menu a:hover {
-  background-color: #EAEAEA;
-}
-
-.show {
-  display:block;
-}
-}
-
-/* Tablet */
-@media screen and (min-width: 701px) and (max-width: 1000px) {
-  .nav {
-    background-color: #448DE5;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
-    color: #E2DFF3;
-    height: 100px;
-  }
-
-  .nav-display {
-    margin-right: 12px;
-    height: 29px;
-    padding: 0 6px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #FC6C37;
-    white-space: pre;
-    border-radius: 4px;
-    color: #E2DFF3;
-  }
-
-  .nav-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-  }
-
-  .nav-group {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .nav-tab {
-    margin-left: 20px;
-    /*align-self: stretch;*/
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    height: 42px;
-    width: 55px;
-    padding: 0 5px;
+  .nav-link-menu-icon{
     position: relative;
   }
 
-  .nav-tab > i ,
-  .nav-tab > .nav-link {
-    padding-top: 5px;
-  }
-
-  .nav-tab:after {
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -4px;
-    width: 0px;
-    height: 4px;
-    background-color: #FC6C37;
-    content: "";
-    transition: width 0.2s;
-  }
-
-  .nav-tab:hover {
-    color: #E2DFF3;
-  }
-  .nav-tab:hover:after {
-    width: 100%;
-  }
-
-  .nav-tab.active {
-    border-bottom-style: solid;
-    border-bottom-color: #FC6C37;
-    border-bottom-width: 4px;
-  }
-
-  .nav-title {
-    font-size: 25px;
-    line-height: 20px;
-    font-family: 'Cantora One', sans-serif;
-    color: #E2DFF3;
-    cursor: default;
-    margin-right: 12px;
-  }
-
-  .nav-link {
-    text-shadow: none;
-    color: #E2DFF3;
-    font-size:18px;
-    text-decoration: none;
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-  }
-
-  .nav-link-menu-icon {
-    visibility: hidden;
-  }
-
-  .navlink:hover {
-    background-color: #EAEAEA;
-  }
-
-  .questionBody {
-    margin: 10px 0;
-  }
-
-  .row {
-    margin-bottom: 10px;
-  }
-
-  .sub-menu {
-      display: none;
-}
-}
-
-/* Laptop */
-@media screen and (min-width: 1001px) and (max-width: 1700px) {
-  .nav {
-    background-color: #448DE5;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
-    color: #E2DFF3;
-    height: 100px;
-  }
-
-  .nav-display {
-    margin-right: 12px;
-    height: 29px;
-    padding: 0 6px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #FC6C37;
-    white-space: pre;
-    border-radius: 4px;
-    color: #E2DFF3;
-  }
-
-  .nav-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-  }
-
-  .nav-group {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .nav-tab {
-    margin-left: 20px;
-    /*align-self: stretch;*/
-    display: flex;
-    align-items: center;
+  .sub-menu{
+    height: 0;
+    margin:0;
+    padding:0;
+    position:absolute;
+    left:0px;
+    right: 0px;
+    transition:height .2s;
+    background:#303036;
     justify-content: space-around;
-    height: 42px;
-    width: 55px;
-    padding: 0 5px;
-    position: relative;
-  }
-
-  .nav-tab > i ,
-  .nav-tab > .nav-link {
-    padding-top: 5px;
-  }
-
-  .nav-tab:after {
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -4px;
-    width: 0px;
-    height: 4px;
-    background-color: #FC6C37;
-    content: "";
-    transition: width 0.2s;
-
-  }
-
-  .nav-tab:hover {
-    color: #E2DFF3;
-  }
-  .nav-tab:hover:after {
-    width: 100%;
-  }
-
-  .nav-tab.active {
-    border-bottom-style: solid;
-    border-bottom-color: #FC6C37;
-    border-bottom-width: 4px;
-  }
-
-  .nav-title {
-    font-size: 25px;
-    line-height: 20px;
-    font-family: 'Cantora One', sans-serif;
-    color: #E2DFF3;
-    cursor: default;
-    margin-right: 12px;
-  }
-
-  .nav-link {
-    text-shadow: none;
-    color: #E2DFF3;
-    font-size:18px;
-    text-decoration: none;
+    align-items: flex-end;
     display: flex;
-    flex-direction: row;
-    align-items: baseline;
+    z-index: 100;
   }
 
-  .nav-link-menu-icon {
-    visibility: hidden;
-  }
-
-  .navlink:hover {
-    background-color: #EAEAEA;
-  }
-
-  .questionBody {
-    margin: 10px 0;
-  }
-
-  .row {
-    margin-bottom: 10px;
-  }
-
-  .sub-menu {
-      display: none;
-    }
-}
-
-
-/* Large Desktop */
-@media screen and (min-width: 1701px){
-  .nav {
-    background-color: #448DE5;
-    box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
-    color: #E2DFF3;
-    height: 100px;
-  }
-
-  .nav-display {
-    margin-right: 12px;
-    height: 29px;
-    padding: 0 6px;
+  .sub-menu-item-wrapper {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #FC6C37;
-    white-space: pre;
-    border-radius: 4px;
-    color: #E2DFF3;
-  }
-
-  .nav-content {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: stretch;
-  }
-
-  .nav-group {
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .nav-tab {
-    margin-left: 20px;
-    align-self: stretch;
-    display: flex;
-    align-items: center;
+    flex-direction: column;
     justify-content: space-around;
-    height: 42px;
-    width: 55px;
-    padding: 0 5px;
-    position: relative;
+    height: 50px;
   }
 
-  .nav-tab > i ,
-  .nav-tab > .nav-link {
-    padding-top: 5px;
-  }
-
-  .nav-tab:after {
-    display: block;
-    position: absolute;
-    left: 0;
-    bottom: -4px;
-    width: 0px;
-    height: 4px;
-    background-color: #FC6C37;
-    content: "";
-    transition: width 0.2s;
-
-  }
-
-  .nav-tab:hover {
-    color: #E2DFF3;
-  }
-  .nav-tab:hover:after {
-    width: 100%;
-  }
-
-  .nav-tab.active {
-    border-bottom-style: solid;
-    border-bottom-color: #FC6C37;
-    border-bottom-width: 4px;
-  }
-
-  .nav-title {
-    font-size: 25px;
-    line-height: 20px;
-    font-family: 'Cantora One', sans-serif;
-    color: #E2DFF3;
-    cursor: default;
-    margin-right: 12px;
-  }
-
-  .nav-link {
-    text-shadow: none;
-    color: #E2DFF3;
+  .sub-menu-item{
+    color:#e2dff3;
     font-size:18px;
-    text-decoration: none;
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
+    padding:6px 0 6px 6px;
+    text-align:left;
+    z-index:1;
+    display: block;
   }
 
-  .nav-link-menu-icon {
-    visibility: hidden;
+  .sub-menu .sub-menu-item:hover{
+    background:#eaeaea;
   }
 
-  .navlink:hover {
-    background-color: #EAEAEA;
+  .show{
+    height: 50px;
   }
-
-  .questionBody {
-    margin: 10px 0;
-  }
-
-  .row {
-    margin-bottom: 10px;
-  }
-
-  .sub-menu {
-      display: none;
-    }
 }
