--- a/components/views/end.hbs
+++ b/components/views/end.hbs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>CS 499 Trivia</title>
+    <title>Tribage</title>
     {{> includes}}
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
