--- a/components/partials/includes.hbs
+++ b/components/partials/includes.hbs
@@ -16,6 +16,8 @@
 
 <link rel="stylesheet" type="text/css" href="/css/nav.css">
 
+<link rel="stylesheet" type="text/css" href="/css/user.css">
+
 <script src="https://use.fontawesome.com/626ced144b.js"></script>
 
 <script type="text/javascript" src="/js/CommonClient.js"></script>
