--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -10,7 +10,7 @@
   <body>
     {{> nav}}
     <div class="container fadeable">
-      {{> room}}
+      {{> user}}
       <div class="row">
         <div class="questionBody">
           {{> qa}}
