--- a/components/partials/user.hbs
+++ b/components/partials/user.hbs
@@ -19,7 +19,8 @@
       </div>
     </div>
     <div class="user-menu-item-label-wrapper">
-      <span class="user-menu-item-label">Room 11</span>
+      <span style="white-space: pre">Room </span>
+      <span id="roomLabel" class="user-menu-item-label">11</span>
       <input name="roomID" class="user-menu-label-edit">
     </div>
 
