--- a/components/css/nav.css
+++ b/components/css/nav.css
@@ -6,18 +6,8 @@
   position: absolute;
   left: 0;
   right: 0;
+  top: 0;
   background-color: #448DE5;
-}
-
-.nav-display{
-  padding:0 6px;
-  display:flex;
-  flex-direction:row;
-  align-items:center;
-  white-space:pre;
-  border-radius:4px;
-  color:#e2dff3;
-  background:#fc6c37;
 }
 
 .nav-content{
@@ -201,6 +191,7 @@
   .sub-menu-item-wrapper {
     display: flex;
     flex-direction: column;
+    text-decoration: none;
     justify-content: space-around;
     height: 50px;
   }
