--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Tribage</title>
     {{> includes}}
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -15,6 +16,8 @@
         <div class="questionBody">
           {{> qa}}
         </div>
+      </div>
+      <div class="row">
         <div class="flex split">
           <button id="answer_submit_button"
             type="button"
@@ -22,7 +25,7 @@
             disabled="true">
             Submit
           </button>
-          <div class="eventlabel nav-display">
+          <div class="eventlabel infoDisplay">
             <span id="eventLabelEvent"></span>
             <span id="eventLabelTime"></span>
           </div>
