--- a/components/partials/user.hbs
+++ b/components/partials/user.hbs
@@ -1,5 +1,5 @@
 <div class="user-menu">
-  <div class="user-menu-item">
+  <div class="user-menu-item single">
     <div class="user-menu-icon-wrapper usernameLabel">
       <i class="user-menu-item-icon fa fa-user" aria-hidden="true"></i>
       <div class="user-menu-edit-icon-wrapper">
@@ -11,7 +11,7 @@
       <input class="user-menu-label-edit">
     </div>
   </div>
-  <div class="user-menu-item right">
+  <div class="user-menu-item single right">
     <div class="user-menu-icon-wrapper roomLabel">
       <i class="user-menu-item-icon fa fa-users" aria-hidden="true"></i>
       <div class="user-menu-edit-icon-wrapper">
