--- a/components/css/style.css
+++ b/components/css/style.css
@@ -11,7 +11,11 @@
 /* Phone */
 @media screen and (max-width: 700px) {
   .banner {
-    font-size: 1em;
+    font-size: 2.5em;
+  }
+
+  .options {
+    flex-direction: column;
   }
 
   .game-description {
@@ -31,6 +35,10 @@
 @media screen and (min-width: 701px) {
   .banner {
     font-size: 4em;
+  }
+
+  .options {
+    flex-direction: row;
   }
 
   .game-description {
@@ -77,6 +85,31 @@ h2 {
 
 ul {
   margin-top: 10px
+}
+
+.options {
+  display: flex;
+}
+
+.preGameDisplay {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 15%;
+}
+
+.gameStarted .preGameDisplay {
+  display: none;
+}
+
+.gameDisplay {
+  display: none;
+}
+
+.gameStarted .gameDisplay {
+  display: block;
 }
 
 .infoDisplay{
