--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -8,26 +8,35 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script type="text/javascript" src="/js/PlayerClient.js"></script>
   </head>
-  <body>
+  <body class="gameStarted">
     {{> nav}}
     <div class="container fadeable">
-      {{> user}}
-      <div class="row">
-        <div class="questionBody">
-          {{> qa}}
-        </div>
+      <div class="options">
+        {{> user}}
+        {{> options}}
       </div>
-      <div class="row">
-        <div class="flex split">
-          <button id="answer_submit_button"
-            type="button"
-            class="btn-primary"
-            disabled="true">
-            Submit
-          </button>
-          <div class="eventlabel infoDisplay">
-            <span id="eventLabelEvent"></span>
-            <span id="eventLabelTime"></span>
+      <div class="preGameDisplay">
+        <h1 class="banner" align="center">Waiting to start</h1>
+        <i class="fa fa-spinner fa-4x fa-spin" aria-hidden="true"></i>
+      </div>
+      <div class="gameDisplay">
+        <div class="row">
+          <div class="questionBody">
+            {{> qa}}
+          </div>
+        </div>
+        <div class="row">
+          <div class="flex split">
+            <button id="answer_submit_button"
+              type="button"
+              class="btn-primary"
+              disabled="true">
+              Submit
+            </button>
+            <div class="eventlabel infoDisplay">
+              <span id="eventLabelEvent"></span>
+              <span id="eventLabelTime"></span>
+            </div>
           </div>
         </div>
       </div>
