--- a/components/css/style.css
+++ b/components/css/style.css
@@ -97,7 +97,6 @@ ul {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 15%;
 }
 
 .gameStarted .preGameDisplay {
@@ -207,4 +206,12 @@ ul {
 .playercount-label {
   font-size: 25px;
   font-weight: 400;
+}
+
+.user-menu.adminPanel {
+  display: none;
+}
+
+.user-menu.adminPanel.admin {
+  display: flex;
 }
