--- a/components/partials/room.hbs
+++ b/components/partials/room.hbs
@@ -1,17 +1,15 @@
-<div class="nav-display">
-  <div>Current Room: </div>
-  <div id="room_id_label">{{roomNumber}}</div>
-</div>
-<div>
-  <input id="room_id_field"
-    type="text"
-    class="form-control input-small"
-    name="roomID"
-    placeholder="New Room ID">
-  <button id="join_room_button"
-    class="btn btn-primary"
-    type="button"
-    disabled="true">
-    Join
-  </button>
+<div class="user-menu">
+  <div class="user-menu-item single fullWidth">
+    <div class="user-menu-icon-wrapper roomLabel">
+      <i class="user-menu-item-icon fa fa-users" aria-hidden="true"></i>
+      <div class="user-menu-edit-icon-wrapper">
+        <i class="user-menu-edit-icon fa fa-pencil fa-flip-horizontal" aria-hidden="true"></i>
+      </div>
+    </div>
+    <div class="user-menu-item-label-wrapper">
+      <span style="white-space: pre">Room </span>
+      <span id="roomLabel" class="user-menu-item-label">11</span>
+      <input name="roomID" class="user-menu-label-edit">
+    </div>
+  </div>
 </div>
