--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script type="text/javascript" src="/js/PlayerClient.js"></script>
   </head>
-  <body class="preGameStarted">
+  <body data-state="waiting">
     {{> nav}}
     <div class="container fadeable">
       <div class="options">
