--- a/components/views/player.hbs
+++ b/components/views/player.hbs
@@ -19,6 +19,10 @@
         <h1 class="banner" align="center">Waiting to start</h1>
         <i class="fa fa-spinner fa-4x fa-spin" aria-hidden="true"></i>
       </div>
+      <div class="transferDisplay">
+        <h1 class="banner" align="center">Waiting for next round</h1>
+        <i class="fa fa-spinner fa-4x fa-spin" aria-hidden="true"></i>
+      </div>
       <div class="gameDisplay">
         <div class="row">
           <div class="questionBody">
