--- a/components/partials/user.hbs
+++ b/components/partials/user.hbs
@@ -7,8 +7,8 @@
       </div>
     </div>
     <div class="user-menu-item-label-wrapper">
-      <span class="user-menu-item-label">Player123</span>
-      <input class="user-menu-label-edit">
+      <span id="usernameLabel" class="user-menu-item-label">Player123</span>
+      <input name="username" class="user-menu-label-edit">
     </div>
   </div>
   <div class="user-menu-item single right">
