Changed home page message

--- a/components/views/home.hbs
+++ b/components/views/home.hbs
@@ -11,12 +11,9 @@
     <div class="container fadeable">
       <div class="row">
         <h1 class="banner" align="center"> Trivia Game </h1>
-        <p class="game-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fringilla nisi id mauris venenatis commodo. Maecenas vitae quam non dui commodo hendrerit ullamcorper in est. Phasellus tincidunt augue non euismod tempus. Aliquam nibh velit, convallis nec efficitur in, efficitur sed justo. Nam nisl elit, mollis quis fermentum et, ullamcorper ut nisl. Duis in vestibulum velit, a cursus libero. Vivamus commodo volutpat odio, eget elementum lectus bibendum vel. Duis volutpat turpis quis molestie venenatis. Ut ligula sem, venenatis id enim eget, porta gravida est. Ut eu ipsum at est porttitor fermentum. Aliquam fermentum sapien eu lacus cursus, vitae scelerisque velit tempus. Etiam dictum, enim sed varius ultrices, ipsum enim varius mauris, sit amet iaculis mi leo quis est. Mauris lectus diam, cursus id placerat eu, ornare eget magna. Mauris nunc mi, facilisis in ex id, lacinia scelerisque massa. Nullam fringilla fermentum laoreet.
-        </p>
-        <p class="game-description">
-          Nullam dignissim quam ut sapien egestas, eu tincidunt velit aliquet. Nulla facilisi. In eget viverra mi. Phasellus quis ornare ipsum. Nam at elit vel neque ultricies elementum. Fusce at molestie lorem. Sed luctus purus ut consectetur tristique. Nullam vel suscipit tortor. Sed enim lectus, vestibulum a ante nec, ultricies interdum lectus. Phasellus auctor, odio placerat bibendum sollicitudin, sapien velit molestie eros, in pharetra sapien eros sit amet tortor. Integer ultricies ornare nisl, vitae feugiat dui commodo ac.
-        </p>
+        <p class="game-description">Tribage is the educational trivia party game brought to you by three George Mason C.S. students. Inspired by the <a href=”http://jackboxgames.com/project/fibbage/”>Fibbage</a> game style, we developed this trivia game using JavaScript. Play with 2 or more friends to test each other's knowledge and have a laugh at the same time. Best of all, your phone or tablet is your controller and you don’t need to install a thing since Tribage is built for the World Wide Web.</p>
+        <p class="game-description">Questions can range from, <i>“Where is the Page Table stored?”</i> to <i>“What was the first movie Owen Wilson starred in?”</i>. It’s all up to you, as our Question Database is growing and diversifying every day. </p>
+        <p class="game-description">Tribage is open-source (viewable on <a href="https://github.com/zachprinz/trivia_project">Github</a>) and free to play, so what are you waiting for? Hack it or play with friends to become the hero of your next party or study session.</p>
       </div>
     </div>
   </body>
